--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ and that brings back nostalgic memories of cold winter evenings of childhood.</p
     <hr size="5" color="brown">
   <p> <img src="https://fv9-3.failiem.lv/thumb_show.php?i=ancv7wa2x&view" height="300px"alt="a_cinnamon_bun"class="center"></p>
     <p><img src="https://fv9-1.failiem.lv/thumb_show.php?i=antzwzx25&view" height="300px"width="400px"alt="a_cinnamon_bun"class="center"></p>
-    <p><img src="https://fv9-1.failiem.lv/thumb_show.php?i=antzwzx25&view" height="300px"alt="a_cinnamon_bun"class="center"></p>
+    <p><img src="https://fv9-3.failiem.lv/thumb_show.php?i=6ux57r22f&view" height="300px"alt="a_cinnamon_bun"class="center"></p>
     <hr size="5" color="brown">
     <br>
 <div class="list">
