--- a/index.html
+++ b/index.html
@@ -63,9 +63,8 @@ and that brings back nostalgic memories of cold winter evenings of childhood.</p
 <br>
     <p>Go back to <a href="#history"> history of the cinnamon bun</a></p>
 <footer>
-        <center><p>2021 Olga Kuricina</p></center>
+        <p style="text-align:center">&copy; 2020 Olga Kuricina</p>
     </footer>
-          
 </body>
 
 </html>
